fix animation scrollbar + fix last frames of spellaton video

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav {
 
     height: var(--nav-height);
     width: calc(100vw - 4rem);
-    padding: 0 2rem;
+    padding: .5rem 2rem;
 
     display: flex;
     align-items: center;
@@ -106,6 +106,7 @@ nav .nav:hover {
 .hero-info {
     padding: 0 4rem;
     padding-top: 7rem;
+    padding-bottom: 3rem;
     height: 7rem;
 
     background: linear-gradient(transparent 0, var(--bg) 100%);
@@ -117,6 +118,8 @@ nav .nav:hover {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+
+    overflow: hidden;
 }
 
 .hero-info p {
